fix some style issue on mobile

--- a/assets/style/sudoku.css
+++ b/assets/style/sudoku.css
@@ -1,23 +1,23 @@
 #board {
-    width: 450px;
-    height: 450px;
+    height: auto;
     margin: 1rem;
     display: grid;
     grid-template-columns: repeat(9, 1fr);
+    grid-template-rows: repeat(9, 1fr);
 }
 
 #digits {
     background-color: var(--background-accent);
-    width: 450px;
-    height: 50px;
+    width: 350px;
+    height: 25px;
     margin: 1rem;
 
     display: flex;
 }
 
 .tile {
-    width: 48px;
-    height: 48px;
+    width: 10vw;
+    height: 10vw;
     border: 1px solid var(--light);
 
     display: flex;
@@ -61,4 +61,21 @@
     align-items: center;
 
     font-size: 1.5rem;
+}
+
+@media (min-width: 769px) {
+    #board {
+       width: 450px;
+       height: 450px;
+    }
+
+    #digits {
+        width: 450px;
+        height: 50px;
+    }
+
+    .tile {
+        width: 48px;
+        height: 48px;
+    }
 }
